# stackoverflow-q70584133

./: .gitignore  Makefile.am  README.md  configure.ac  main.c
bar/: bar.c  bar.h
foo/: foo-host.h  foo-nt.c  foo.c  foo.h
src/: Makefile.am  Makefile.in  main.c
src/foo/: foo-host-os-type.h  foo-linux.c  foo-nt.c  foo-windows.c  foo.c
